--- a/src/templates/autocomplete-material.html
+++ b/src/templates/autocomplete-material.html
@@ -2,12 +2,11 @@
     <!-- Surrounding DIV for sfField builder to add a sfField directive to. -->
     <div class="pull-left" ng-controller="autocompleterCtrl">
         <label>{{form.title}}</label>
-        <md-autocomplete ng-model="$$value$$" sf-changed="form" md-selected-item="$$value$$" md-selected-item-change="form.onSelect(this)"
-        schema-validate="form" md-search-text="searchText" placeholder="{{form.schema.placeholder}}" ng-blur="form.onBlur(this, searchText)"
-        ng-keydown="form.onBlur(this, searchText)" md-search-text-change="form.onSearchChange(form,searchText)"
-        md-items="item in form.options.asyncCallback(form, searchText)" md-item-text="item.display">
-            <span md-highlight-text="searchText">{{item.display}}</span>
-        </md-autocomplete>
+
+        <div style='position:relative'>
+            <live-search type="text" live-search-callback="form.options.asyncCallback"
+        live-search-item-template="{{result.display}}" live-search-select="display" live-search-value="$$value$$" live-search-select-callback="onBlur"></live-search>
+        </div>
         <!-- sf-field-model let's the ngModel builder know that you want a ng-model that matches against the form key here -->
         <!-- schema-validate="form" validates the form against the schema -->
 
