--- a/src/templates/autocomplete-list.html
+++ b/src/templates/autocomplete-list.html
@@ -15,7 +15,7 @@
             box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             z-index: 1000;
             float: left;
-            width: 100%;
+            min-width: 100%;
             padding: 5px 0;
             margin: 2px 0 0;
             font-size: 14px;
